knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CapturePCA__e/CapturePCA__e.object-meta.xml
<CustomObject>
    <label>CapturePCA</label>
    <pluralLabel>CapturePCAs</pluralLabel>
</CustomObject>