knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CapturePCA__e/fields/contractId__c.field-meta.xml
<CustomField>
    <fullName>contractId__c</fullName>
    <label>contractId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>