knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CapturePCA__e/fields/CPAId__c.field-meta.xml
<CustomField>
    <fullName>CPAId__c</fullName>
    <label>CPAId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>