knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CapturePCA__e/fields/PCAId__c.field-meta.xml
<CustomField>
    <fullName>PCAId__c</fullName>
    <label>PCAId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>